--- a/programming_languages/javascript/browser/example_website/stylesheets/style.css
+++ b/programming_languages/javascript/browser/example_website/stylesheets/style.css
@@ -5,19 +5,32 @@ body {
 #main {
 	background: #fff;
 	width: 500px;
-	padding: 10px 20px 10px 20px;
-	margin: 10px auto 10px auto;
+	padding: 5px 20px 10px 20px;
+	margin: 20px auto 20px auto;
 }
 
-#title {
-	font: 22px 'Tahoma';
+#header {
+	font: 32px 'Helvetica';
 	border-bottom: 1px dashed #555;
 	padding: 0 0 10px 0;
 }
 
 #description {
-	font: 14px 'Helvetica';
+	font: 14px 'Georgia', serif;
+	line-height: 18px;
 	color: #888;
 }
 
+.font_size {
+	font-family: 'Georgia', serif;
+	float: right;
+}
 
+.smaller_font {
+	font-size: 18px;
+}
+
+.larger_font {
+	font-size: 24px;
+	padding: 0 0 0 10px;
+}
